Updated SQL script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 PLACEHOLDER_API_BASE_URI=https://jsonplaceholder.typicode.com
+management.endpoints.web.exposure.include=*
+## DON'T USE THIS IN PRODUCTION
+management.endpoint.configprops.show-values=always
