--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@ placeholder_api_base_uri=https://jsonplaceholder.typicode.com
 management.endpoints.web.exposure.include=*
 ## DON'T USE THIS IN PRODUCTION
 management.endpoint.configprops.show-values=always
+
+### Docker Compose Configuration ###
+#spring.docker.compose.enabled=true
+spring.docker.compose.lifecycle-management=start_only
+#spring.docker.compose.file=compose.yml
+#spring.docker.compose.profiles.active=dev
+
+### Virtual Threads Configuration ###
+#server.tomcat.threads.max=5
+#spring.threads.virtual.enabled=true
