--- a/compose.yml
+++ b/compose.yml
@@ -1,27 +1,12 @@
 version: '3.8'
 name: 'modern-spring-boot'
 services:
-  modern-spring-boot:
-    image: sivaprasadreddy/modern-spring-boot
-    container_name: modern-spring-boot
-    environment:
-      SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_DRIVER-CLASS-NAME: org.postgresql.Driver
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgresdb:5432/postgres
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
-    ports:
-      - "8080:8080"
-    restart: unless-stopped
-    depends_on:
-      - postgresdb
 
-  postgresdb:
+  postgres:
     image: postgres:16-alpine
-    container_name: postgresdb
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      - 'POSTGRES_DB=mydatabase'
+      - 'POSTGRES_PASSWORD=secret'
+      - 'POSTGRES_USER=myuser'
     ports:
-      - "5432:5432"
+      - "5432"
