--- a/compose.yml
+++ b/compose.yml
@@ -2,10 +2,10 @@ name: 'modern-spring-boot'
 services:
 
   postgres:
-    image: postgres:16-alpine
+    image: postgres:17-alpine
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=postgres'
+      - 'POSTGRES_PASSWORD=postgres'
+      - 'POSTGRES_USER=postgres'
     ports:
       - "5432"
